# bakers-archive

./: .gitignore  LICENSE  README.md  docker-compose.yml  package.json
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/api/: index.py
backend/app/: auth.py  blob_storage.py  main.py  models.py  storage.py
backend/app/routes/: admin.py  auth.py  media.py  recipes.py
backend/tests/: test_recipes.py
data/recipes/baguette-traditional/: meta.json  notes.txt  recipe.txt
data/recipes/brioche-classic/: meta.json  notes.txt  recipe.txt
data/recipes/focaccia-rosemary/: meta.json  notes.txt  recipe.txt
data/recipes/fuckgotcha-rosemary/: meta.json  notes.txt  recipe.txt
data/recipes/sourdough-country-loaf/: meta.json  notes.txt  recipe.txt
data/recipes/whole-wheat-sandwich/: meta.json  notes.txt  recipe.txt
frontend/: .env.local.example  Dockerfile  next.config.js  package-lock.json  package.json  tsconfig.json  vercel.json
frontend/app/: layout.tsx  page.tsx  providers.tsx  theme.ts
frontend/app/admin/: page.tsx
frontend/components/: CreateRecipeDialog.tsx  LoginDialog.tsx  RecipeCard.tsx  RecipeList.tsx  RecipeMetadata.tsx  RecipeView.tsx  SearchBar.tsx  SidebarGrouped.tsx
frontend/lib/: AuthContext.tsx  api.ts  auth.ts
