[project]
name = "bakers-archive-backend"
version = "0.2.0"
description = "The Bakers Archive Backend"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.135.2",
    "pydantic>=2.12.5",
    "uvicorn>=0.42.0",
    "python-jose>=3.5.0",
    "passlib>=1.7.4",
    "sqlalchemy>=2.0.49",
    "psycopg2-binary>=2.9.11",
    "python-multipart>=0.0.24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]